Add mobile header

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <title>Document</title>
 </head>
 <body>
+  <header id="mobileHeader">
+    <nav id="mobMenuPH">
+      <input type="image" id="mobileMenu" src="images/mobile_menu.png" alt="Menu">
+    </nav>
+    <img id="mobLogo" src="images/logo.png" alt="logo" alt="Logo">
+  </header>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
   <script src="main.js"></script>
 </body>
