Add headline and Main program sections to the mobile version

--- a/index.html
+++ b/index.html
@@ -15,6 +15,51 @@
     </nav>
     <img id="mobLogo" src="images/logo.png" alt="logo" alt="Logo">
   </header>
+  <section id="headline">
+    <div id="title">
+      <h1 id="greeting">"Hello, caring world!"</h1>
+      <h2 id="name">Climate Change<br>Global Summit<br>2022</h2>
+    </div>
+    <p id="description">
+      A crucial gathering for climate leaders from all around the world. Some of the most urgent problems that we as humanity have to address will be discussed January 2023, in Mexico City
+    </p>
+    <div id="datesPH">
+      <p id="date">2023.17.01(TUE) ~ 22(SUN)</p>
+      <p id="venue">@  National Convention Center D'Rubi, Art Center and more</p>
+    </div>
+  </section>
+  <section id="mainProgram">
+    <p id="mainTitle">Main Program</p>
+    <div id="guideBar"></div>
+    <ul id="programList">
+      <li class="programFeat">
+        <img class="featureIcon" src="images/lectureIcon.png" alt="Lecture Icon">
+        <p class="featureName">Lecture</p>
+        <p class="featureDesc">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </li>
+      <li class="programFeat">
+        <img class="featureIcon" src="images/exhibitionIcon.png" alt="Lecture Icon">
+        <p class="featureName">Exhibition</p>
+        <p class="featureDesc">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </li>
+      <li class="programFeat">
+        <img class="featureIcon" src="images/forumIcon.png" alt="Lecture Icon">
+        <p class="featureName">Forum</p>
+        <p class="featureDesc">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </li>
+      <li class="programFeat">
+        <img class="featureIcon" src="images/workshopIcon.png" alt="Lecture Icon">
+        <p class="featureName">Workshop</p>
+        <p class="featureDesc">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </li>
+      <li class="programFeat">
+        <img class="featureIcon" src="images/igniteIcon.png" alt="Lecture Icon">
+        <p class="featureName">Ignite</p>
+        <p class="featureDesc">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </li>
+    </ul>
+    <a id="joinBttn" href="https://unfccc.int/cop27?gclid=CjwKCAjwyaWZBhBGEiwACslQo3IVsZebuCKcNjw_td1Y32zy3vmvXMGsLxB7l-1uSk5N1qQHkEUDUhoCSjQQAvD_BwE#attend">Join CC Global Summit 2023</a>
+  </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
   <script src="main.js"></script>
 </body>
