--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </section>
   <section id="mainProgram">
     <p id="mainTitle">Main Program</p>
-    <div id="guideBar"></div>
+    <div class="guideBar"></div>
     <ul id="programList">
       <li class="programFeat">
         <img class="featureIcon" src="images/lectureIcon.png" alt="Lecture Icon">
@@ -59,6 +59,40 @@
       </li>
     </ul>
     <a id="joinBttn" href="https://unfccc.int/cop27?gclid=CjwKCAjwyaWZBhBGEiwACslQo3IVsZebuCKcNjw_td1Y32zy3vmvXMGsLxB7l-1uSk5N1qQHkEUDUhoCSjQQAvD_BwE#attend">Join CC Global Summit 2023</a>
+  </section>
+  <section id="featuredSpeakers">
+    <p id="speakersTitle">
+      Featured Speakers
+    </p>
+    <div class="guideBar"></div>
+    <div id="speakersList">
+      <div class="speakerCard">
+        <img class="speakerImage" src="images/speaker1.png" alt="" srcset="">
+        <div class="speakerTxt">
+          <p class="speakerName">Yochai Benkler</p>
+          <p class="speakerRes">Berkham Professor of Entrepeneurial Legal Studies at Harvard Law School</p>
+          <div class="speakerBar"></div>
+          <p class="speakerDesc">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+        </div>
+      </div>
+      <div class="speakerCard">
+        <img class="speakerImage" src="images/speaker2.png" alt="" srcset="">
+        <div class="speakerTxt">
+          <p class="speakerName">SohYeong Noh</p>
+          <p class="speakerRes">Director of Art Centre Nabi and a Board member of CC Korea</p>
+          <div class="speakerBar"></div>
+          <p class="speakerDesc">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+      </div>
+    </div>
+    <button id="moreBttn" class="speakersBttn" type="submit">
+      <p id="moreTxt" class="speakersBttnTxt">MORE</p>
+      <img id="moreArrow" src="images/moreBttnArrow.png" alt="arrow">
+    </button>
+    <button id="lessBttn" class="speakersBttn" type="submit">
+      <p id="lessTxt" class="speakersBttnTxt">LESS</p>
+      <img id="lessArrow" src="images/moreBttnArrow.png" alt="arrow">
+    </button>
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
   <script src="main.js"></script>
