Add project images

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
   <title>Document</title>
 </head>
 <body>
-  <header id="mobileHeader">
+  <header class="mobileHeader">
     <nav id="mobMenuPH">
       <input type="image" id="mobileMenu" src="images/mobile_menu.png" alt="Menu">
     </nav>
-    <img id="mobLogo" src="images/logo.png" alt="logo" alt="Logo">
+    <img id="mobLogo" src="images/mobileMenu.svg" alt="logo" alt="Logo">
   </header>
   <section id="headline">
     <div id="title">
       <h1 id="greeting">"Hello, caring world!"</h1>
       <h2 id="name">Climate Change<br>Global Summit<br>2022</h2>
     </div>
-    <p id="description">
+    <p class="description">
       A crucial gathering for climate leaders from all around the world. Some of the most urgent problems that we as humanity have to address will be discussed January 2023, in Mexico City
     </p>
     <div id="datesPH">
