Move CSS classes

--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
     <nav id="mobMenuPH">
       <input type="image" id="mobileMenu" src="images/mobile_menu.png" alt="Menu">
     </nav>
+    <img id="mobLogo" src="images/mobileMenu.svg" alt="logo" alt="Logo">
   </header>
   <section id="headline2">
     <div id="title2">
