Finish mobile version layout & styling

--- a/about.html
+++ b/about.html
@@ -27,8 +27,49 @@
       <a href="mailto:ricardomartineza77@gmail.com" id="contactMail">ricardomartineza77@gmail.com</a>
   </section>
   <section id="logoSection">
-    
+    <p id="logoTitle">Climate Change<br>Global Summit 2023 Logo</p>
+    <div id="logoBar" class="divisionBar"></div>
+    <p id="logoTxt">
+      The logo of CC Global Summit 2023 was decided through the logo competition from 24. June to 23. July.
+    </p>
+    <img id="logoImg" src="images\CCLogo.svg" alt="Climate Change Logo">
   </section>
+  <section id="pastSummits">
+    <p id="pastTitle">
+      See the past CC Global Summits
+    </p>
+    <div id="pastBar" class="divisionBar"></div>
+    <p id="pastDesc">
+      Take a look at the last two CC Global Summits which took place in Montréal and in Barcelona.
+    </p>
+    <div id="pastImgPH">
+      <div id="pastImg1" class="pastImg">
+        <p class="pastYear">2019</p>
+        <p class="pastSummit">CC Global Summit 2019 in Montréal</p>
+      </div>
+      <div id="pastImg2" class="pastImg">
+        <p class="pastYear">2021</p>
+        <p class="pastSummit">CC Global Summit 2021 in Barcelona</p>
+      </div>
+    </div>
+  </section>
+  <section id="partners">
+    <p id="partnerTitle">Partner</p>
+    <div id="partnerBar" class="divisionBar"></div>
+    <div id="partnersList">
+      <img class="partnerItem" id="mozilla" src="images/mozilla.png" alt="">
+      <img class="partnerItem" id="google" src="images/g.png" alt="">
+      <img class="partnerItem" id="naver" src="images/naver.png" alt="">
+      <img class="partnerItem" id="daumkakao" src="images/daumkakao.png" alt="">
+      <img class="partnerItem" id="airbnb" src="images/airbnb.png" alt="">
+    </div>
+  </section>
+  <footer id="footer">
+    <div id="footerImgPH">
+      <img id="footerImg" src="images/blackLogo.svg" alt="">
+      <p id="footerTxt">2023 Climate Change Earth. Some Rights Reserved.</p>
+    </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
   <script src="main.js"></script>
 </body>
