--- a/html/about.html
+++ b/html/about.html
@@ -5,15 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="../styles.css">
   <title>Document</title>
 </head>
 <body>
   <header class="mobileHeader">
     <nav id="mobMenuPH">
-      <input type="image" id="mobileMenu" src="images/mobile_menu.png" alt="Menu">
+      <input type="image" id="mobileMenu" src="../images/mobile_menu.png" alt="Menu">
     </nav>
-    <img id="mobLogo" src="images/mobileMenu.svg" alt="logo" alt="Logo">
+    <img id="mobLogo" src="../images/mobileMenu.svg" alt="logo" alt="Logo">
   </header>
   <section id="headline2">
     <div id="title2">
@@ -32,7 +32,7 @@
     <p id="logoTxt">
       The logo of CC Global Summit 2023 was decided through the logo competition from 24. June to 23. July.
     </p>
-    <img id="logoImg" src="images\CCLogo.svg" alt="Climate Change Logo">
+    <img id="logoImg" src="../images\CCLogo.svg" alt="Climate Change Logo">
   </section>
   <section id="pastSummits">
     <p id="pastTitle">
@@ -57,16 +57,16 @@
     <p id="partnerTitle">Partner</p>
     <div id="partnerBar" class="divisionBar"></div>
     <div id="partnersList">
-      <img class="partnerItem" id="mozilla" src="images/mozilla.png" alt="">
-      <img class="partnerItem" id="google" src="images/g.png" alt="">
-      <img class="partnerItem" id="naver" src="images/naver.png" alt="">
-      <img class="partnerItem" id="daumkakao" src="images/daumkakao.png" alt="">
-      <img class="partnerItem" id="airbnb" src="images/airbnb.png" alt="">
+      <img class="partnerItem" id="mozilla" src="../images/mozilla.png" alt="">
+      <img class="partnerItem" id="google" src="../images/g.png" alt="">
+      <img class="partnerItem" id="naver" src="../images/naver.png" alt="">
+      <img class="partnerItem" id="daumkakao" src="../images/daumkakao.png" alt="">
+      <img class="partnerItem" id="airbnb" src="../images/airbnb.png" alt="">
     </div>
   </section>
   <footer id="footer">
     <div id="footerImgPH">
-      <img id="footerImg" src="images/blackLogo.svg" alt="">
+      <img id="footerImg" src="../images/blackLogo.svg" alt="">
       <p id="footerTxt">2023 Climate Change Earth. Some Rights Reserved.</p>
     </div>
   </footer>
