--- a/index.html
+++ b/index.html
@@ -15,6 +15,31 @@
     </nav>
     <img id="mobLogo" src="images/mobileMenu.svg" alt="logo" alt="Logo">
   </header>
+  <header class="deskHeader">
+    <div class="topMenu1">
+      <a class="facebook" href="https://www.facebook.com/">
+        <img src="images\facebook.png" alt="Twitter">
+      </a>
+      <a class="twitter" href="https://twitter.com/ricmtza">
+        <img src="images\twitter.png" alt="Twitter">
+      </a>
+      <a class="english topMenuTxt" href="index.html">English</a>
+      <a class="myPage topMenuTxt" href="index.html">My Page</a>
+      <a class="logout topMenuTxt" href="index.html">Logout</a>
+    </div>
+    <div class="topMenu2">
+      <a class="deskImgPH" href="index.html">
+        <img class="deskImg" src="images/mobileMenu.svg" alt="CC Logo">
+      </a>
+      <a class="topMenu2Txt" href="html/about.html">About</a>
+      <a class="topMenu2Txt" href="index.html">Program</a>
+      <a class="topMenu2Txt" href="index.html">Join</a>
+      <a class="topMenu2Txt" href="index.html">Sponsor</a>
+      <a class="topMenu2Txt" href="index.html">News</a>
+      <a class="topMenu2Txt" href="index.html">CC Campaign</a>
+      
+    </div>
+  </header>
   <section id="headline">
     <div id="title">
       <h1 id="greeting">"Hello, caring world!"</h1>
@@ -59,6 +84,7 @@
       </li>
     </ul>
     <a id="joinBttn" href="https://unfccc.int/cop27?gclid=CjwKCAjwyaWZBhBGEiwACslQo3IVsZebuCKcNjw_td1Y32zy3vmvXMGsLxB7l-1uSk5N1qQHkEUDUhoCSjQQAvD_BwE#attend">Join CC Global Summit 2023</a>
+    <a id="wholeProgram" href="index.html">SEE THE WHOLE PROGRAM</a>
   </section>
   <section id="featuredSpeakers">
     <p id="speakersTitle">
