Add desktop media queries to FeaturedSpeakers, Partners & Footer sections on index.html file

--- a/html/about.html
+++ b/html/about.html
@@ -56,12 +56,12 @@
   <section id="partners">
     <p id="partnerTitle">Partner</p>
     <div id="partnerBar" class="divisionBar"></div>
-    <div id="partnersList">
-      <img class="partnerItem" id="mozilla" src="../images/mozilla.png" alt="">
-      <img class="partnerItem" id="google" src="../images/g.png" alt="">
-      <img class="partnerItem" id="naver" src="../images/naver.png" alt="">
-      <img class="partnerItem" id="daumkakao" src="../images/daumkakao.png" alt="">
-      <img class="partnerItem" id="airbnb" src="../images/airbnb.png" alt="">
+    <div class="partnersList">
+      <img class="partnerItem" id="mozilla" src="../images/mozilla.png" alt="Mozilla">
+      <img class="partnerItem" id="google" src="../images/g.png" alt="Google">
+      <img class="partnerItem" id="naver" src="../images/naver.png" alt="Naver">
+      <img class="partnerItem" id="daumkakao" src="../images/daumkakao.png" alt="Daumkakao">
+      <img class="partnerItem" id="airbnb" src="../images/airbnb.png" alt="Airbnb">
     </div>
   </section>
   <footer id="footer">
