--- a/index.html
+++ b/index.html
@@ -120,6 +120,30 @@
       <img id="lessArrow" src="images/moreBttnArrow.png" alt="arrow">
     </button>
   </section>
+  <section id="partnersDesk">
+    <p id="partnerTitleDesk">Partner</p>
+    <div class="guideBar"></div>
+    <div class="partnersList">
+      <img class="partnerItem" src="../images/mozilla.png" alt="Mozilla">
+      <img class="partnerItem" src="../images/g.png" alt="Google">
+      <img class="partnerItem" src="../images/naver.png" alt="Naver">
+      <img class="partnerItem" src="../images/daumkakao.png" alt="Daumkakao">
+      <img class="partnerItem" src="../images/airbnb.png" alt="Airbnb">
+    </div>
+  </section>
+  <footer id="footer2">
+    <div class="footerImgPH">
+      <img class="footerImg" src="../images/blackLogo.svg" alt="">
+      <div class="footerTxt">
+        <p id="footerTxt1">
+          2023 Climate Change Earth. Some Rights Reserved.
+        </p>
+        <p id="footerTxt2">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam ratione deserunt quasi porro harum laboriosam aperiam error distinctio assumenda earum! Asperiores, tenetur alias, quia qui inventore esse deleniti ullam ipsam necessitatibus, molestias iusto.
+        </p>
+      </div>
+    </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
   <script src="main.js"></script>
 </body>
