Add desktop media queries to about.html file

--- a/html/about.html
+++ b/html/about.html
@@ -15,6 +15,31 @@
     </nav>
     <img id="mobLogo" src="../images/mobileMenu.svg" alt="logo" alt="Logo">
   </header>
+  <header class="deskHeader">
+    <div class="topMenu1">
+      <a class="facebook" href="https://www.facebook.com/">
+        <img src="../images/facebook.png" alt="Twitter">
+      </a>
+      <a class="twitter" href="https://twitter.com/ricmtza">
+        <img src="../images/twitter.png" alt="Twitter">
+      </a>
+      <a class="english topMenuTxt" href="index.html">English</a>
+      <a class="myPage topMenuTxt" href="index.html">My Page</a>
+      <a class="logout topMenuTxt" href="index.html">Logout</a>
+    </div>
+    <div class="topMenu2">
+      <a class="deskImgPH" href="index.html">
+        <img class="deskImg" src="../images/mobileMenu.svg" alt="CC Logo">
+      </a>
+      <a class="topMenu2Txt" href="html/about.html">About</a>
+      <a class="topMenu2Txt" href="index.html">Program</a>
+      <a class="topMenu2Txt" href="index.html">Join</a>
+      <a class="topMenu2Txt" href="index.html">Sponsor</a>
+      <a class="topMenu2Txt" href="index.html">News</a>
+      <a class="topMenu2Txt" href="index.html">CC Campaign</a>
+      
+    </div>
+  </header>
   <section id="headline2">
     <div id="title2">
       <h1 id="greeting2">"Hello, caring world!"</h1>
@@ -22,6 +47,9 @@
     </div>
     <p class="description" id="aboutDesc">
       A crucial gathering for climate leaders from all around the world. Some of the most urgent problems that we as humanity have to address will be discussed January 2023, in Mexico City
+    </p>
+    <p id="aboutDescDesk" class="description">
+      A crucial gathering for climate leaders from all around the world. Some of the most urgent problems that we as humanity have to address will be discussed January 2023, in Mexico City. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero labore ipsam debitis, ratione consequatur est consequuntur! Iste unde tenetur, numquam ut illo quam consequuntur, consequatur odit delectus ducimus eum necessitatibus incidunt eos rerum culpa! Voluptate sequi vel mollitia ex, neque perspiciatis voluptates inventore a? Dicta at dolor consequuntur? Ullam minima cum fugit, deserunt vel nostrum totam atque. Accusamus, vel architecto!
     </p>
       <p id="contactTxt">Please contact us per Email for any other questions about CC Global Summit 2023!</p>
       <a href="mailto:ricardomartineza77@gmail.com" id="contactMail">ricardomartineza77@gmail.com</a>
@@ -31,6 +59,11 @@
     <div id="logoBar" class="divisionBar"></div>
     <p id="logoTxt">
       The logo of CC Global Summit 2023 was decided through the logo competition from 24. June to 23. July.
+    </p>
+    <p id="logoTxtDesk">
+      The logo of CC Global Summit 2023 was decided through the logo competition from 24. June to 23. July.<br>
+      After online public votind and Selection Committee's judging process, the logo from Sof Barrera won the prize.<br>
+      After consultation with Mr. Lomelí we optimized the prize-winning-logo for this year's summit as following
     </p>
     <img id="logoImg" src="../images\CCLogo.svg" alt="Climate Change Logo">
   </section>
@@ -68,6 +101,19 @@
     <div id="footerImgPH">
       <img id="footerImg" src="../images/blackLogo.svg" alt="">
       <p id="footerTxt">2023 Climate Change Earth. Some Rights Reserved.</p>
+    </div>
+  </footer>
+  <footer id="footer3">
+    <div class="footerImgPH">
+      <img class="footerImg" src="../images/whiteLogo.svg" alt="">
+      <div class="footerTxt">
+        <p id="footerTxt11">
+          2023 Climate Change Earth. Some Rights Reserved.
+        </p>
+        <p id="footerTxt21">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam ratione deserunt quasi porro harum laboriosam aperiam error distinctio assumenda earum! Asperiores, tenetur alias, quia qui inventore esse deleniti ullam ipsam necessitatibus, molestias iusto.
+        </p>
+      </div>
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
