Fix path of index.html image files

--- a/index.html
+++ b/index.html
@@ -124,16 +124,16 @@
     <p id="partnerTitleDesk">Partner</p>
     <div class="guideBar"></div>
     <div class="partnersList">
-      <img class="partnerItem" src="../images/mozilla.png" alt="Mozilla">
-      <img class="partnerItem" src="../images/g.png" alt="Google">
-      <img class="partnerItem" src="../images/naver.png" alt="Naver">
-      <img class="partnerItem" src="../images/daumkakao.png" alt="Daumkakao">
-      <img class="partnerItem" src="../images/airbnb.png" alt="Airbnb">
+      <img class="partnerItem" src="images/mozilla.png" alt="Mozilla">
+      <img class="partnerItem" src="images/g.png" alt="Google">
+      <img class="partnerItem" src="images/naver.png" alt="Naver">
+      <img class="partnerItem" src="images/daumkakao.png" alt="Daumkakao">
+      <img class="partnerItem" src="images/airbnb.png" alt="Airbnb">
     </div>
   </section>
   <footer id="footer2">
     <div class="footerImgPH">
-      <img class="footerImg" src="../images/blackLogo.svg" alt="">
+      <img class="footerImg" src="images/blackLogo.svg" alt="">
       <div class="footerTxt">
         <p id="footerTxt1">
           2023 Climate Change Earth. Some Rights Reserved.
