Fix index.html and about.html links

--- a/html/about.html
+++ b/html/about.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="../styles.css">
   <title>Document</title>
 </head>
+
 <body>
   <header class="mobileHeader">
     <nav id="mobMenuPH">
@@ -23,20 +24,20 @@
       <a class="twitter" href="https://twitter.com/ricmtza">
         <img src="../images/twitter.png" alt="Twitter">
       </a>
-      <a class="english topMenuTxt" href="index.html">English</a>
-      <a class="myPage topMenuTxt" href="index.html">My Page</a>
-      <a class="logout topMenuTxt" href="index.html">Logout</a>
+      <a class="english topMenuTxt" href="../index.html">English</a>
+      <a class="myPage topMenuTxt" href="../index.html">My Page</a>
+      <a class="logout topMenuTxt" href="../index.html">Logout</a>
     </div>
     <div class="topMenu2">
       <a class="deskImgPH" href="index.html">
         <img class="deskImg" src="../images/mobileMenu.svg" alt="CC Logo">
       </a>
-      <a class="topMenu2Txt" href="html/about.html">About</a>
-      <a class="topMenu2Txt" href="index.html">Program</a>
-      <a class="topMenu2Txt" href="index.html">Join</a>
-      <a class="topMenu2Txt" href="index.html">Sponsor</a>
-      <a class="topMenu2Txt" href="index.html">News</a>
-      <a class="topMenu2Txt" href="index.html">CC Campaign</a>
+      <a class="topMenu2Txt" href="about.html">About</a>
+      <a class="topMenu2Txt" href="../index.html">Program</a>
+      <a class="topMenu2Txt" href="../index.html">Join</a>
+      <a class="topMenu2Txt" href="../index.html">Sponsor</a>
+      <a class="topMenu2Txt" href="../index.html">News</a>
+      <a class="topMenu2Txt" href="../index.html">CC Campaign</a>
       
     </div>
   </header>
