Fix Stylelint & ESLint errors

--- a/html/about.html
+++ b/html/about.html
@@ -31,7 +31,7 @@
       <a class="logout topMenuTxt" href="../index.html">Logout</a>
     </div>
     <div class="topMenu2">
-      <a class="deskImgPH" href="index.html">
+      <a class="deskImgPH" href="../index.html">
         <img class="deskImg" src="../images/mobileMenu.svg" alt="CC Logo">
       </a>
       <a class="topMenu2Txt" href="about.html">About</a>
