Fix close mobile menu image path

--- a/html/about.html
+++ b/html/about.html
@@ -45,8 +45,8 @@
   </header>
   <section class="mobileMenu" id="mobMenuAbt">
     <div class="mobMenuMain">
-      <div class="xButtonPH">
-        <input class="xButtonImg" id='xMenuBttn' type="image" src="../Images/xButton.svg" alt="CloseMenu">
+      <div class="xButtonPH">`
+        <input class="xButtonImg" id='xMenuBttn' type="image" src="../images/xButton.svg" alt="CloseMenu">
       </div>
       <div class="mobMenuOptions">
         <ul class="mobMenuList">
