--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <section class="mobileMenu" id="mobMenuIndex">
     <div class="mobMenuMain">
       <div class="xButtonPH">
-        <input class="xButtonImg" id='xMenuBttn' type="image" src="Images/xButton.svg" alt="CloseMenu">
+        <input class="xButtonImg" id='xMenuBttn' type="image" src="images/xButton.svg" alt="CloseMenu">
       </div>
       <div class="mobMenuOptions">
         <ul class="mobMenuList">
