Fix spacing between SpeakerCards, add BG image to main program section & modify CCCampaign border and font color

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <a class="topMenu2Txt" href="index.html">Join</a>
       <a class="topMenu2Txt" href="index.html">Sponsor</a>
       <a class="topMenu2Txt" href="index.html">News</a>
-      <a class="topMenu2Txt" href="index.html">CC Campaign</a>
+      <a class="topMenu2Txt campaign" href="index.html">CC Campaign</a>
       
     </div>
   </header> 
